--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -133,7 +133,10 @@
       "Level": "Current level",
       "Beginner": "Beginner",
       "Intermediate": "Intermediate",
-      "Advanced": "Advanced"
+      "Advanced": "Advanced",
+      "Basic": "Basic",
+      "BasicInfo": "Basic info",
+      "StudentProfile": "Student profile"
    },
    "TutorInfo": {
       "Title": "Tutor info",
@@ -163,7 +166,10 @@
       "TeachingCertificates": "Teaching certificates",
       "ProfilePicture": "Profile picture",
       "AboutMe": "About me",
-      "IntroductionDescription": "Say hello and introduce yourself to students! This will be the first thing students read about you when looking at their tutor profile"
+      "IntroductionDescription": "Say hello and introduce yourself to students! This will be the first thing students read about you when looking at their tutor profile",
+      "TutorProfile": "Tutor profile",
+      "Basic": "Basic",
+      "Additional": "Additional"
    },
    "Home": {
       "Welcome": "Welcome, {{name}}!"
@@ -185,6 +191,7 @@
    },
    "Settings": {
       "Title": "Settings",
+      "AccountSettings": "Account settings",
       "Profile": "Profile",
       "Password": "Password"
    },
