--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -19,13 +19,15 @@
       "Title": "Status",
       "Active": "Active",
       "Inactive": "Inactive",
-      "Pending": "Pending"
+      "Pending": "Pending",
+      "Blocked": "Blocked"
    },
    "Action": {
       "Title": "Action",
       "Select": "Select",
       "Continue": "Continue",
       "Back": "Back",
+      "Block": "Block",
       "Close": "Close",
       "Login": "Login",
       "Register": "Register",
@@ -40,8 +42,11 @@
       "Remove": "Remove",
       "Approve": "Approve",
       "Reject": "Reject",
+      "Clear": "Clear",
       "GetStarted": "Get started",
-      "PressEnterToAdd": "Press Enter to add"
+      "PressEnterToAdd": "Press Enter to add",
+      "ChangePassword": "Change password",
+      "ViewProfile": "View profile"
    },
    "Toast": {
       "CreateSuccessfully": "Create successfully",
@@ -222,6 +227,7 @@
       "Title": "User",
       "Titles": "Users",
       "Profile": "Profile",
+      "UserProfile": "User profile",
       "Password": "Password",
       "SearchPlaceholder": "Find by name or email"
    },
